# python-oceandsls

./: .gitignore  .gitlab-ci.yml  ArrayInit.g4  CommonLexerRules.g4  Configuration.g4  Expr.g4  Expression.g4  LICENSE  Makefile  README.md  dsl0.py  dsl_antlr4_intelij.py  dsl_antlr4_ltst.py  gitignore  package-lock.json  package.json  req_antlr4-python.txt  req_intellij.txt  source.sh  test_Expr.py  tsconfig.json
antlrLib/: pyproject.toml  requirements.txt
antlrLib/CodeCompletionCore/tests/: test_CodeCompletionCore_with_unittest.py
antlrLib/codeCompletionCore/: CodeCompletionCore.py
antlrLib/codeCompletionCore/tests/: test_CodeCompletionCore_pytest.py  test_CodeCompletionCore_unittest.py  test_CodeCompletionCore_with_unittest.py
antlrLib/tests/: test_CodeCompletionCore_pytest.py  test_CodeCompletionCore_unittest.py
bgc-dsl/: README.md  package.json  pyproject.toml  setup.py
bgc-dsl/bgcLSPServer/: __init__.py  __main__.py  main_generator.py  server.py
bgc-dsl/bgcLSPServer/cst/: DiagnosticListener.py  FileGeneratorVisitor.py  Generator.py  SymbolTableVisitor.py
bgc-dsl/bgcLSPServer/example/: Het  Nutrients  example.bgc
bgc-dsl/bgcLSPServer/fileWriter/: Generator.py
bgc-dsl/bgcLSPServer/fileWriter/jinja-templates/: flux_start.txt  fun_group.txt  parameter_declaration.txt  parameter_list.txt  read_namelist.txt  read_start.txt  set_start.txt  value_initialization.txt
bgc-dsl/bgcLSPServer/grammars/: BgcDsl.g4
bgc-dsl/bgcLSPServer/other/: Main.py  my server old.py  test.py  test_sample.py  test_symbolTableVisitor.py
bgc-dsl/bgcLSPServer/symbolTable/: SymbolTable.py
bgc-dsl/bgcLSPServer/utils/: suggestVariables.py
bgc-dsl/bgclspserver/: __main__.py  server.py
bgc-dsl/bgclspserver/cst/: symbol_table_visitor.py
bgc-dsl/bgclspserver/symboltable/: symbol_table.py
bgc-dsl/bgclspserver/utils/: bgc_errors_strategy.py  compute_token_index.py  suggest_variables.py
bgc-dsl/client/src/: extension.ts
bgc-dsl/input/: example1_no_dup_vars.bgc  server_test_file.txt
bgc-dsl/src/grammar/.antlr/: CommonLexerRulesLexer.interp  CommonLexerRulesLexer.java
bgc-dsl/tests/: __init__.py  __main__zum_testen.py  test_symbolTableVisitor.py
bgc-dsl/visitor/: example1.bgc
example-dsl/: .vscodeignore  README.md  package-lock.json  package.json  pyproject.toml  setup.py  test.txt  tsconfig.json
example-dsl/client/src/: extension.ts
example-dsl/exampleLSPServer/: __main__.py  server.py
example-dsl/exampleLSPServer/cst/: DiagnosticListener.py  SymbolTableVisitor.py  VerboseListener.py
example-dsl/exampleLSPServer/grammars/: BgcDsl.interp  BgcDslParser.py
example-dsl/exampleLSPServer/other/: core_dev_test.py  server_dev_test.py  symbol_dev_test.py  template_simple_test.py
example-dsl/exampleLSPServer/symbolTable/: SymbolTable.py
example-dsl/exampleLSPServer/utils/: computeTokenIndex.py  suggestVariables.py
example-dsl/examplelspserver/: __main__.py  server.py
example-dsl/examplelspserver/cst/: diagnostic_listener.py  symbol_table_visitor.py  verbose_listener.py
example-dsl/examplelspserver/other/: core_dev_test.py  server_dev_test.py  symbol_dev_test.py  template_simple_test.py
example-dsl/examplelspserver/symboltable/: symbol_table.py
example-dsl/examplelspserver/utils/: compute_token_index.py  suggest_variables.py
example-dsl/grammars/: TestExprCore.g4
example-dsl/grammars/depr/: TestExpr.g4
example-dsl/lspExampleServer/: README.md  __main__.py  server.py
example-dsl/lspExampleServer/antlr/: SymbolTableVisitor.py
example-dsl/lspExampleServer/grammars/: exampleDsl.g4
example-dsl/lspExampleServer/tmp/: template_simple_test.py
example-dsl/lspExampleServer/utils/: suggestVariables.py
example-dsl/tests/: test_SymbolTable.py  test_VerboseListener.py  test_VerboseListener_pytest.py  test_VerboseListener_unittest.py  test_features.py
tdd-dsl/: Error  README.md  package-lock.json  package.json  pyproject.toml  setup.py  todo_note
tdd-dsl/client/src/: extension.ts
tdd-dsl/fileWriter/: tdd_gen_dev.py
tdd-dsl/fxca/model/: ContainmentHashMap.py  FortranModule.py  FortranProject.py
tdd-dsl/input/: test_fT_ME.tdd  test_fT_ME_multi.tdd
tdd-dsl/input/UVic_metrics/: Cyclomatic Complexity  Depth of Nesting  Halstead Complexity Difficulty  Lines of Code  Testability Factor  Time required to program  test_UVic.tdd  test_UVic_Oppendorf.tdd
tdd-dsl/input/f90_test/: cfo_sut_example.f90
tdd-dsl/input/fxtran/dependencies/: cfo.f90
tdd-dsl/input/tdd_dev/: SHAPE_MOD.F90
tdd-dsl/src/grammar/: Keyword.g4  TestSuite.g4
tdd-dsl/src/grammars/: Reference.g4
tdd-dsl/src/tddGenerator/: tdd_gen_dev.py
tdd-dsl/tddLSPServer/: __main__.py  server.py
tdd-dsl/tddLSPServer/cst/: DiagnosticListener.py  F90FileGeneratorVisitor.py  FileGeneratorVisitor.py  PFFileGeneratorVisitor.py  SymbolTableVisitor.py  SystemFileVisitor.py  enumTest.py
tdd-dsl/tddLSPServer/fileWriter/: FileWriter.py  fileWriter.py
tdd-dsl/tddLSPServer/grammars/: PhysicalUnits.g4  TestSuite.g4
tdd-dsl/tddLSPServer/other/: fileMerger.py  fxtranCall.py  fxtran_call.py  fxtran_g.py  merge_fortran_function.py  tddGenDev.py
tdd-dsl/tddLSPServer/symbolTable/: SymbolTable.py
tdd-dsl/tddLSPServer/utils/: computeTokenIndex.py  suggestVariables.py
tdd-dsl/tddlspserver/: __main__.py  server.py
tdd-dsl/tddlspserver/cst/: calculate_complexity_visitor.py  cmake_file_generator_visitor.py  diagnostic_listener.py  f90_file_generator_visitor.py  pf_file_generator_visitor.py  symbol_table_visitor.py  system_file_visitor.py
tdd-dsl/tddlspserver/filewriter/: file_writer.py
tdd-dsl/tddlspserver/grammars/: PhysicalUnits.g4  TestSuite.g4
tdd-dsl/tddlspserver/other/: calculate_complexity.py  cmake_gen.py  enum_test.py  file_merger.py  fxtran_call.py  fxtran_g.py  symbol_table_class_diagram.py  tdd_gen_dev.py
tdd-dsl/tddlspserver/symboltable/: symbol_table.py
tdd-dsl/tddlspserver/utils/: __init__.py  calculate_complexity.py  compute_token_index.py  suggest_variables.py  tdd_errors_strategy.py
(+637 files in other folders)
