[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["input","client","node_modules"]

[project]
name = "BGC-Language-Server"
version = "0.40.0"
authors = [
    { name="sgu", email="sgu@informatik.uni-kiel.de" },
]
description = "A program for a language server based on the bgc ocean-dsl."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "odsllib >= 0.38",
]
classifiers = [
    'Development Status :: 3 - Alpha',
    "Programming Language :: Python :: 3.10",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Software Development",
]

license = {text = "Apache License (2.0)"}

[project.urls]
"oceandsl · GitLab" = "https://git.se.informatik.uni-kiel.de/oceandsl"
"OceanDSL · GitHub" = "https://github.com/cau-se/python-oceandsls"

[project.scripts]
bgc_dsl = "bgcLSPServer.__main__:main"
