[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Example-Language"
version = "0.40.0"
authors = [
    { name="sgu", email="sgu@informatik.uni-kiel.de" },
]
description = "A test dsl of the OceanDSL project."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "odsllib >= 0.38",
]
classifiers = [
    'Development Status :: 3 - Alpha',
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"oceandsl · GitLab" = "https://git.se.informatik.uni-kiel.de/oceandsl"
"OceanDSL · GitHub" = "https://github.com/OceanDSL"

[project.scripts]
exp_dsl = "examplelspserver.__main__:main"