[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "TDD-Language"
version = "0.80.0"
authors = [
    { name="sgu", email="sgu@informatik.uni-kiel.de" },
]
description = "A program for a language server based on the test driven development ocean-dsl."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "odsllib >= 0.38",
]
classifiers = [
    'Development Status :: 3 - Alpha',
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"oceandsl · GitLab" = "https://git.se.informatik.uni-kiel.de/oceandsl"
"OceanDSL · GitHub" = "https://github.com/OceanDSL"

[project.scripts]
tdd_dsl = "tddlspserver.__main__:main"